syntax = "proto3";

package auth_v1;

option go_package = "serviceauth/pkg/auth_v1;auth_v1";

service AuthenticationV1 {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
    rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string refresh_token = 1;
}

message GetRefreshTokenRequest {
    string old_refresh_token = 1;
}

message GetRefreshTokenResponse {
    string new_refresh_token = 1;
}

message GetAccessTokenRequest {
    string refresh_token = 1;
}

message GetAccessTokenResponse {
    string access_token = 1;
}